modified app.js, docker file and home page

--- a/source/pages/home.html
+++ b/source/pages/home.html
@@ -40,12 +40,12 @@
             <li>/days</li>
             <li>/people</li>
         </ul>
+
+        <div>
+            <h2>Author: <a href="https://github.com/nobleorji/vanillaNob.git">noble orji</a></h2>
+        </div>
     </div>
     
-
-    <div style="position: fixed; bottom: 0; right: 0; padding-right: 3em;">
-        <h2>Author: <a href="https://github.com/nobleorji/vanillaNob.git">noble orji</a></h2>
-    </div>
 </body>
 
 </html>
