updated all files

--- a/source/pages/home.html
+++ b/source/pages/home.html
@@ -5,7 +5,7 @@
     <title>nodeJS demo</title>
     <style>
         body {
-            background-image: url('https://mdbootstrap.com/img/Photos/Others/images/55.jpg');
+            background-image: url('https://mdbootstrap.com/img/Photos/Others/images/70.jpg');
             padding: 3em;
         }
         .welcome {
@@ -41,7 +41,7 @@
             <li>/people</li>
         </ul>
         <div>
-            <h2>Author: <a href="https://github.com/kirillrakitin">Kirill Rakitin</a></h2>
+            <h2>Author: <a href="https://github.com/nobleorji">noble orji</a></h2>
         </div>
     </div>
     
